Import of MARCEL/Module-Install-Bugtracker-0.02 from CPAN.
gitpan-cpan-distribution: Module-Install-Bugtracker
gitpan-cpan-version:      0.02
gitpan-cpan-path:         MARCEL/Module-Install-Bugtracker-0.02.tar.gz
gitpan-cpan-author:       MARCEL
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,8 @@
 Revision history for Perl extension Module-Install-Bugtracker
 
+0.02 Sun 2010.02.07 16:35:54 CET (Marcel Gruenauer <marcel@cpan.org>)
+     - fixed bugtracker URL
+     - now uses uri_escape() for distribution name in URL
+
 0.01 Mon Sep  7 17:43:43 MSZ 2009 (Marcel Gruenauer <marcel@cpan.org>)
      - original version
